k8s/ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"  # Required for MetalLB
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.60
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: nginx-ingress
